# AgenticAICert

./: OpenAIKey.txt  handbook.md  prompts.txt  pyproject.toml
.claude/: settings.local.json
Final Project/: preparation.ipynb  prompts_demo.ipynb
Learner's Handbook/: Learner's Handbook.ipynb
Learner's Handbook/.ipynb_checkpoints/: Learner's Handbook-checkpoint.ipynb
Lectures/Week-1/: Pre-work session 1 - Business Application of Agentic AI by Kishore Srirambhatla - Transcript.txt
Lectures/Week-3/: Introduction_to_DSPy.ipynb  MLS_W3_RAG_&_dspyRAG___JHU_Agentic_AI.ipynb  Mentoring - Prompt Engineering Foundation.ipynb  Prompt_Engineering_Code.ipynb  readingMaterialSummary.ipynb
Lectures/Week-4/: meeting_saved_closed_caption.txt
Lectures/Week-5/: meeting_saved_closed_caption.txt
Lectures/Week-6/: AgenticRAG_W6_Rec_NB (2).ipynb  meeting_saved_closed_caption.txt  week-6-LiveSessionNotes.md
Lectures/Week-7/: Goal_Based_&_Utility_Based_Agent.ipynb  MLS7_MCP_SingleAgentSystem.ipynb  W7_MCP_Agent.ipynb
Lectures/Week-8/: MLS8_Responsible_E_Commerce_Chat_Agent.ipynb  MLS8_Study_Notes_Guardrails_Claude.ipynb  W8_Rec_NB_RespAI_Hiring_Agent.ipynb  config.json  meeting_saved_closed_caption.txt  responsible_ai_guardrails_OpenAI_study_notebook.ipynb  (+1 more)
Projects/Project2 - Autonomous Financial Research Analyst/: AGENT_CHARTER_WITH_RAG.txt  cell_25.txt  cell_26.txt  cell_27.txt  meeting_saved_closed_caption.txt  notebook_code_cells.txt  pip_cell.txt  pyproject.toml
Samples/: Instructions_for_Implementing_RAG_with_VolleyBall_Dataset.md  RAG_Implementation_Guide.md
(+2375 files in other folders)
