[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.3.4",
    "langchain==0.3.27",
    "langchain-community==0.3.31",
    "langchain-core==0.3.79",
    "langchain-openai==0.3.11",
    "langgraph==0.3.7",
    "pypdf==6.2.0",
    "tavily-python>=0.7.23",
    "tiktoken==0.12.0",
    "yfinance==0.2.66",
]
